--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "javascript"
   ],
   "dependencies": {
-  	"crier": "*"
+    "crier": "*",
+    "textualization": "*"
   },
   "devDependencies": {
     "mocha": "*",
