--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "templated",
   "description": "Multi template engine manager for Node.js.",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "author": {
     "name": "Javier Gallego Martín",
     "email": "bifuer@gmail.com"
@@ -48,7 +48,8 @@
   "files": [
     "LICENSE",
     "README.md",
-    "index.js"
+    "index.js",
+    "languages"
   ],
   "readmeFilename": "README.md",
   "license": "MIT"
