Update new organization URLs (github,travis...)

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
       "email": "cheloq@gmail.com"
     }
   ],
-  "homepage": "https://github.com/bifuer/templated",
+  "homepage": "https://github.com/pillarsjs/templated",
   "repository": {
     "type": "git",
-    "url": "git://github.com/bifuer/templated"
+    "url": "git://github.com/pillarsjs/templated"
   },
   "bugs": {
-    "url": "https://github.com/bifuer/templated/issues",
+    "url": "https://github.com/pillarsjs/templated/issues",
     "email" : "cheloq@gmail.com"
   },
   "keywords": [
