--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "templated",
   "description": "Multi template engine manager for Node.js.",
-  "version": "0.3.2",
+  "version": "0.3.6",
   "author": {
     "name": "Javier Gallego Martín",
     "email": "bifuer@gmail.com"
@@ -37,7 +37,7 @@
     "textualization": "*",
     "marked": "*",
     "highlight.js": "*",
-    "pug": "*",
+    "pug": "2.0.0-beta6",
     "handlebars": "*",
     "hogan.js": "*",
     "nunjucks": "*"
