--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "templated",
   "description": "Multi template engine manager for Node.js.",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "author": {
     "name": "Javier Gallego Martín",
     "email": "bifuer@gmail.com"
@@ -40,7 +40,8 @@
     "pug": "2.0.0-beta6",
     "handlebars": "*",
     "hogan.js": "*",
-    "nunjucks": "*"
+    "nunjucks": "*",
+    "less": "*"
   },
   "devDependencies": {
     "mocha": "*",
