--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "description": "Multi template engine manager for Node.js.",
   "version": "0.3.9",
   "author": {
-    "name": "Javier Gallego Martín",
-    "email": "bifuer@gmail.com"
+    "name": "Bifuer"
   },
   "contributors": [
     {
